# Tabula

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
docs/: HW-2.ipynb  report.html  report.ipynb
examples/: example_usage.py
tabula/: environments.py  solvers.py  utils.py
tabula/algorithms/: dynamic_programming.py  monte_carlo.py  temporal_difference.py
tabula/games/: boat.py  geosearch.py  grid_world.py
tests/: test_boat.py  test_dp.py  test_geosearch.py  test_mc.py  test_monte_carlo_boat.py  test_monte_carlo_gridworld.py  test_td.py
unit_tests/: test_environments.py  test_solvers.py  test_utils.py
